personal web-site

--- a/index.html
+++ b/index.html
@@ -1,3 +1,64 @@
-<p>
-hello world
-</p>
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Rowdies:wght@300&display=swap"
+      rel="stylesheet"
+    />
+    <style>
+      body {
+        background: #262626;
+        color: white;
+        margin: 30px;
+        font-family: rowdies;
+      }
+      #stinky {
+        color: rgb(204, 18, 18);
+      }
+      #r6 {
+        width: 255px;
+      }
+      #ghost {
+        font-size: 50px;
+        display: block;
+      }
+      #next-page {
+        display: block;
+      }
+      #game {
+        font-size: 75px;
+        color: #fcba03;
+      }
+    </style>
+  </head>
+  <body>
+    <h1 id="stinky">Walker's Web Site</h1>
+    <p>Hi</p>
+    <p>Super Epic Web Site Woo Woo</p>
+    <div>
+      <img
+        id="r6"
+        src="https://upload.wikimedia.org/wikipedia/commons/a/a2/Rainbow_Six_siege_photo_2014-06-14_17-51.jpg"
+      />
+    </div>
+    <a id="ghost" href="https://youtu.be/XUmiEZDJkeo"> ghost </a>
+    <iframe
+      width="560"
+      height="315"
+      src="https://www.youtube.com/embed/stuTvrsjn-g"
+      title="YouTube video player"
+      frameborder="0"
+      allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+      allowfullscreen
+    ></iframe>
+    <div>
+      <img
+        src="https://media.snl.no/media/38735/standard_compressed_National_Park_Service_9-11_Statue_of_Liberty_and_WTC_fire.jpg"/>
+    </div>
+    <a id="next-page" href="/page2.html"> page2 </a>
+    <a id="game" href="https://succulent-desert-swordtail.glitch.me/"> My Game!</a>
+    
+  </body>
+</html>
